<resources>
    <string name="app_name">My Application</string>
    <string name="calend_rio">Calendário</string>
    <string name="hello_activitie">hello activitie</string>
    <string name="agenda">Agenda</string>
    <string name="adicionar_evento">Adicionar Evento</string>
    <string name="titulo">Titulo:</string>
    <string name="data">Data</string>
    <string name="dia">Dia</string>
    <string name="mes">Mes</string>
    <string name="ano">Ano</string>
    <string name="hora">Hora</string>
    <string name="tipo">Tipo</string>
    <string name="anota_es">Anotações</string>
    <string name="adicionar">Adicionar</string>
    <string name="textview">TextView</string>
    <string name="selecione_uma_data">Selecione uma data:</string>

    <string-array name="datastest">
        <item>data1</item>
        <item>data2</item>
        <item>data3</item>
    </string-array>

    <string-array name="diastest">
        <item>dia1</item>
        <item>dia2</item>
        <item>dia3</item>
    </string-array>

    <string-array name="mesestest">
        <item>mes1</item>
        <item>mes2</item>
        <item>mes3</item>
    </string-array>

    <string-array name="anostest">
        <item>ano1</item>
        <item>ano2</item>
        <item>ano3</item>
    </string-array>

    <string-array name="horastest">
        <item>hora 1</item>
        <item>hora 2</item>
        <item>hora 3</item>
    </string-array>

    <string-array name="tipostest">
        <item>tipo1</item>
        <item>tipo2</item>
        <item>tipo3</item>
    </string-array>
    <string name="title_activity_evento_activities">EventoActivities</string>

</resources>
