<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#3f51b5"
    app:cardBackgroundColor="#3f51b5">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/data"
            android:textColor="@color/cardview_light_background" />

        <TextView
            android:id="@+id/dia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/data"
            android:text="@string/dia"
            android:textColor="@color/cardview_light_background" />

        <TextView
            android:id="@+id/mes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/dia"
            android:text="@string/mes"
            android:textColor="@color/cardview_light_background" />

        <TextView
            android:id="@+id/ano"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/mes"
            android:text="@string/ano"
            android:textColor="@color/cardview_light_background" />

        <TextView
            android:id="@+id/hora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ano"
            android:layout_marginLeft="10dp"
            android:text="@string/hora"
            android:textColor="@color/cardview_light_background" />

        <TextView
            android:id="@+id/tipoepa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hora"
            android:layout_marginLeft="10dp"

            android:text="@string/tipo"
            android:textColor="@color/cardview_light_background" />


    </RelativeLayout>


</android.support.v7.widget.CardView>